Remove managed table concept. (#17)