@@ -7,13 +7,7 @@ package io.lakestream.ursa.lakehouse.cleaner;
 import com.google.common.annotations.VisibleForTesting;
 import io.lakestream.api.EntryIndex;
 import io.lakestream.api.Position;
-import io.lakestream.api.materialization.ResolvedMaterialization;
-import io.lakestream.api.materialization.TableCatalogType;
-import io.lakestream.api.materialization.TableMode;
-import io.lakestream.ursa.lakehouse.LakehouseCommitter;
-import io.lakestream.ursa.lakehouse.LakehouseConfiguration;
-import io.lakestream.ursa.lakehouse.exception.LakehouseException;
-import io.lakestream.ursa.lakehouse.v2.LakehouseWriterFactory;
+import io.lakestream.ursa.compaction.common.CompactedObjectFileIndex;
 import io.lakestream.ursa.lakehouse.writer.ParquetFileStat;
 import io.lakestream.ursa.storage.FileStorage;
 import io.lakestream.ursa.storage.StorageApi;
@@ -25,7 +19,6 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
@@ -35,7 +28,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
@@ -47,7 +39,6 @@ import lombok.extern.slf4j.Slf4j;
  *   <li>Splitting large cleanup tasks into manageable sub-tasks, each handling up to 1000 of files.</li>
  *   <li>For each sub-task:
  *     <ul>
- *       <li>Committing file deletions to the Lakehouse metadata (for managed tables, e.g., Iceberg/DeltaLake).</li>
  *       <li>Deleting the physical parquet files from cloud storage in batch.</li>
  *       <li>Removing the corresponding Oxia index entries to ensure logical consistency.</li>
  *     </ul>
@@ -67,7 +58,6 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
     private final StorageApi storage;
     private final FileStorage fileStorage;
     private final ExecutorService executor;
-    private final Function<String, Optional<ResolvedMaterialization>> materializationLookup;
     private static final int MAX_FILES_PER_TASK = 1000;
     private static final long INFLIGHT_DRAIN_TIMEOUT_SECS = 60L;
 
@@ -88,89 +78,14 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
      * @param fileStorage The file storage API for deleting files from cloud storage.
      */
     public CompactedDataCleanupHandler(StorageConfig config, StorageApi storage, FileStorage fileStorage) {
-        this(config, storage, fileStorage, null);
-    }
-
-    /**
-     * Constructs a cleanup handler that can resolve per-stream catalog policies.
-     *
-     * @param config                storage and legacy lakehouse configuration
-     * @param storage               storage API used to read and delete indexes
-     * @param fileStorage           compacted-object storage
-     * @param materializationLookup current resolved materialization by canonical stream/log name,
-     *                              or {@code null} for legacy config-only deployments
-     */
-    public CompactedDataCleanupHandler(
-            StorageConfig config,
-            StorageApi storage,
-            FileStorage fileStorage,
-            Function<String, Optional<ResolvedMaterialization>> materializationLookup) {
         this.config = config;
         this.storage = storage;
         this.fileStorage = fileStorage;
-        this.materializationLookup = materializationLookup;
         this.executor = Executors.newFixedThreadPool(config.getCompactedDataCleanupThreadNum(),
                 new DefaultThreadFactory("ursa-compacted-data-cleanup"));
     }
 
     record SubTask(TopicCleanupTask parentTask, List<ParquetFileStat> parquetFiles, long endOffset) {
-    }
-
-    /**
-     * Returns the list of LakehouseCommitter instances for the given topic.
-     * Used to commit file deletions to the Lakehouse metadata (for managed tables).
-     *
-     * @param task The cleanup task.
-     * @return The list of committers for the topic.
-     */
-    @VisibleForTesting
-    List<LakehouseCommitter> getLakeHouseCommitters(TopicCleanupTask task) {
-        return getLakehouseConfiguration(task)
-                .map(lakehouseConfig -> LakehouseCommitter.get(
-                        lakehouseConfig, task.getCompactionTopic()))
-                .orElseGet(Collections::emptyList);
-    }
-
-    /**
-     * Resolves the same managed-table configuration used by the writer and committer. A catalog
-     * policy wins over deployment-wide legacy settings, so an explicit managed table identifier
-     * cannot make cleanup target the incarnation-scoped storage name by mistake.
-     */
-    @VisibleForTesting
-    Optional<LakehouseConfiguration> getLakehouseConfiguration(TopicCleanupTask task) {
-        if (materializationLookup != null) {
-            Optional<ResolvedMaterialization> resolved = materializationLookup.apply(task.getCompactionTopic());
-            if (resolved.isPresent()) {
-                ResolvedMaterialization materialization = resolved.get();
-                TableMode mode = materialization.effectivePolicy().table()
-                        .flatMap(table -> table.mode())
-                        .orElse(TableMode.MANAGED);
-                if (mode != TableMode.MANAGED) {
-                    // External/custom tables do not contain the managed Compacted Objects.
-                    return Optional.empty();
-                }
-                TableCatalogType catalogType = materialization.catalog().type();
-                String prefix;
-                switch (catalogType) {
-                    case ICEBERG -> prefix = "iceberg";
-                    case DELTA, DELTA_UC -> prefix = "delta";
-                    case CLICKHOUSE, NONE -> {
-                        return Optional.empty();
-                    }
-                    default -> throw new IllegalArgumentException(
-                            "Unsupported managed table catalog type: " + catalogType);
-                }
-                return Optional.of(LakehouseWriterFactory.buildConfiguration(
-                        materialization.catalog(), materialization.effectivePolicy(), prefix, Map.of()));
-            }
-        }
-
-        LakehouseConfiguration legacyConfig = new LakehouseConfiguration(config.getProperties());
-        if (legacyConfig.getStreamTableMode() == LakehouseConfiguration.StreamTableMode.EXTERNAL) {
-            // For external tables, we don't need to commit deletions to the Lakehouse.
-            return Optional.empty();
-        }
-        return Optional.of(legacyConfig);
     }
 
     /**
@@ -218,14 +133,24 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
                         // The format for the `fileFullPath` looks like
                         // "{compactionPrefix}/public/default/topic/__partition=0/part-xxx.parquet"
                         // The `fileFullPath` is used to delete the file from the Cloud Storage.
-                        String fileFullPath = getFileFullPath(compactionTopic, file.location());
-                        final Map<String, String> tags = Map.of(
-                                "totalMessage", String.valueOf(index.header().numberOfMessages())
-                        );
-                        var stats = new ParquetFileStat(file.location(), fileFullPath, file.size(), null,
-                                Collections.emptyMap(), tags);
-                        parquetFiles.add(stats);
-                        totalFiles++;
+                        List<String> locations = index.extraData()
+                                .map(metadata -> metadata.get(CompactedObjectFileIndex.NAME))
+                                .map(CompactedObjectFileIndex::deserializeFromString)
+                                .map(CompactedObjectFileIndex::filePaths)
+                                .orElseGet(() -> List.of(file.location()));
+                        if (locations.isEmpty()) {
+                            throw new IllegalStateException("Empty CO file index for stream " + task.streamId());
+                        }
+                        for (String location : locations) {
+                            String fileFullPath = getFileFullPath(compactionTopic, location);
+                            final Map<String, String> tags = Map.of(
+                                    "totalMessage", String.valueOf(index.header().numberOfMessages()));
+                            parquetFiles.add(new ParquetFileStat(location, fileFullPath, file.size(), null,
+                                    Collections.emptyMap(), tags));
+                        }
+                        totalFiles += locations.size();
+                        // Keep every file of an EntryIndex in one subtask. Trimming a partial
+                        // group would lose the references needed to retry the remaining deletes.
                         endOffset = index.header().offset() + index.header().numberOfMessages();
                         if (parquetFiles.size() >= MAX_FILES_PER_TASK) {
                             subTasks.add(new SubTask(task, parquetFiles, endOffset));
@@ -251,7 +176,7 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
      * The process includes:
      * <ul>
      *   <li>Splitting the cleanup into sub-tasks if there are many files.</li>
-     *   <li>For each sub-task, deleting files from the Lakehouse and cloud storage, and updating the Oxia index.</li>
+     *   <li>For each sub-task, deleting internal files from cloud storage, and updating the Oxia index.</li>
      * </ul>
      *
      * @param task The cleanup task containing topic metadata and the mark-deleted offset.
@@ -277,7 +202,6 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
     /**
      * Processes each sub-task in the queue sequentially:
      * <ul>
-     *   <li>Commits file deletions to the Lakehouse (if applicable).</li>
      *   <li>Deletes files from cloud storage in batch.</li>
      *   <li>Deletes the corresponding Oxia index entries.</li>
      * </ul>
@@ -301,20 +225,16 @@ public class CompactedDataCleanupHandler implements StartStopRunner {
             return CompletableFuture.completedFuture(null);
         }
 
-        var lakeHouseCommitters = getLakeHouseCommitters(task);
-        for (var committer : lakeHouseCommitters) {
-            try {
-                committer.delete(parquetFiles);
-                log.info("Committed deletion of compacted files for topic: {}, mark deleted offset: {}",
-                        task.topic(), task.markDeletedOffset());
-            } catch (LakehouseException e) {
-                // Duplicate deletion is allowed, it won't throw an exception.
-                return CompletableFuture.failedFuture(e);
-            }
-        }
-
         List<String> files = parquetFiles.stream()
-                .map(ParquetFileStat::getFileFullPath)
+                .flatMap(stat -> {
+                    String parquet = stat.getFileFullPath();
+                    if (!parquet.endsWith(".parquet")) {
+                        throw new IllegalArgumentException("Invalid CO file path: " + parquet);
+                    }
+                    String rowIndex = parquet.substring(0, parquet.length() - ".parquet".length()) + ".index";
+                    return java.util.stream.Stream.of(parquet, rowIndex);
+                })
+                .distinct()
                 .collect(Collectors.toList());
 
         // The deleteAsync should be handled by the executor thread pool because there is a sync operation
